# elion

./: .gitignore  README.md  environment.yml  pyproject.toml  spec-file.txt
elion/: bias_moler_generator.py  bias_moler_generator_batch.py  bias_release_generator.py  calculate_properties.py  elion.py  filter_molecules.py  finetune_CHEMBERT.py  generate_mols_release.py  input_example.yml  input_reader.py  reward_function.py  test_chembert.py  utils.py
elion/generators/: Generator.py  ReLeaSE.py
elion/generators/moler/: gen.smi  generate_moler.sh  generate_moler_batch.py  generate_moler_batch.sh
elion/generators/release/: reinforcement.py_working  release_generator.py  stackRNN.py
elion/properties/: CHEMBERT_BE.py  Estimators.py  Prop1.py  Prop2.py  Prop3.py  Property.py  QEDScore.py  SAScore.py  ScaffoldMatch.py  VinaScore.py  properties_and_rewards.py  test_properties.sh
elion/properties/CHEMBERT/: validation.smi  validation_100.smi
elion/properties/SA_Score/: sascore.py
elion/properties/activity/: scan_chembert.py
elion/vsdb/: chembl_web.py  db_readers.py  db_utils.py  enumerate_mols.py  mol_properties.py
elion/vsdb/dimorphite_dl/: README_VSDB.md  dimorphite_dl.patch  dimorphite_dl.py
src/elion/: __init__.py  bias_moler_generator_batch.py  elion.py  example_smiles.smi  example_template.smarts  filter_molecules.py  finetune_CHEMBERT.py  input_example.yml  input_reader.py  reward_function.py  scan_chembert.py  utils.py
src/elion/generators/: AbstractGenerator.py  Generator.py  ReLeaSE.py
src/elion/properties/: ADMET_Predictor.py  ADMET_Risk.py  (+16 more)
(+26 files in other folders)
