[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
[project]
name = "elion"
description = "Elion description here"
version = "0.0.1"
authors = [
    {name = "Gustavo Seabra", email = "seabra@cop.ufl.edu"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "rdkit",
    'importlib; python_version<"3.8"',
]
dynamic = ["version"]