[build-system]
    requires = ["setuptools", "setuptools-scm"]
    build-backend = "setuptools.build_meta"

[project]
    name = "elion"
    description = "Elion description here"
    version = "0.0.1a0.dev0"
    authors = [
                {name = "Gustavo Seabra", email = "seabra@cop.ufl.edu"},
              ]
    readme = "README.md"
    requires-python = ">=3.7"
    license = "MIT"
    keywords = ["drug discovery", "hit optimization", "molecular generator"]
    classifiers = [
                    "Development Status :: 0 - Alpha",
                    "Programming Language :: Python :: 3",
                  ]

[project.urls]
    Repository = "https://github.com/gmseabra/elion"

[project.scripts]
    elion = "elion.elion:main"
